--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ body, html{
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (353).jpg") no-repeat;
 
 
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat;
     background-position: 50% 50%;
     background-size: cover;
 }
