--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,29 +48,28 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (183).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (392).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (221).jpg") no-repeat; background-position: 0% 90%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (269).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (274).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (278).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (277).jpg") no-repeat; background-position: 0% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (221).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (269).jpg") no-repeat; background-position: 0% 20%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (274).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (278).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (277).jpg") no-repeat; background-position: 0% 50%;
 
 
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (353).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (281).jpg") no-repeat; background-position: 0% 80%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (306).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (211).jpg") no-repeat; background-position: 0% 20%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (213).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (188).jpg") no-repeat; background-position: 0% 65%;
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 100%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (281).jpg") no-repeat; background-position: 0% 80%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (306).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (211).jpg") no-repeat; background-position: 0% 20%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat; background-position: 0% 70%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (213).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (188).jpg") no-repeat; background-position: 0% 65%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (353).jpg") no-repeat; background-position: 0% 60%;
 
-
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 50% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 50% 50%;
     background-size: cover;
 }
 .products{
