--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,12 +43,13 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (127).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 10%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (178).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (183).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (392).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (178).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (183).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (392).jpg") no-repeat; background-position: 0% 45%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 0% 70%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (221).jpg") no-repeat; background-position: 0% 60%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (269).jpg") no-repeat; background-position: 0% 20%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (274).jpg") no-repeat; background-position: 0% 50%;
