--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,25 +24,25 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat; background-position: 50% 75%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 50% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (74).jpg") no-repeat; background-position: 50% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (74).jpg") no-repeat; background-position: 50% 100%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat; background-position: 50% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (37).jpg") no-repeat; background-position: 50% 75%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat; background-position: 50% 40%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (39).jpg") no-repeat; background-position: 50% 92%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (74).jpg") no-repeat; background-position: 50% 100%;
 
 
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (149).jpg") no-repeat; background-position: 0% 0%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (197).jpg") no-repeat; background-position: 0% 0%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (276).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (233).jpg") no-repeat; background-position: 0% 30%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (106).jpg") no-repeat; background-position: 0% 80%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (244).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (298).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (107).jpg") no-repeat; background-position: 0% 45%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (279).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (127).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 10%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (276).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (233).jpg") no-repeat; background-position: 0% 30%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (106).jpg") no-repeat; background-position: 0% 80%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (244).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (298).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (107).jpg") no-repeat; background-position: 0% 45%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (279).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (127).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 10%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (178).jpg") no-repeat; background-position: 0% 50%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0% 40%;
