--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (277).jpg") no-repeat; background-position: 0% 50%;
 
 
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
@@ -67,7 +67,7 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (188).jpg") no-repeat; background-position: 0% 65%;
 
 
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 50% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 50% 50%;
     background-size: cover;
 }
 .products{
