--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,10 +63,10 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (213).jpg") no-repeat; background-position: 0% 40%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (211).jpg") no-repeat; background-position: 0% 20%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
 
     background-size: cover;
 }
