--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,6 +1,7 @@
 <div class='page details m-0 p-0'>
     <div
         class="top row justify-content-lg-center align-items-start"
+        style.background-image="linear-gradient(#0007,#0007), url('{{this.productInfo.img}}')"
     >
         <a href="http://localhost:4200/products">
             <img class="m-3" height="30" src="../assets/Zillow_Wordmark_Blue_RGB lrg.png">
@@ -11,13 +12,12 @@
                 <h6><strong>{{this.productInfo?.name}}</strong></h6>
                 <p>{{this.productInfo?.description}}</p>
                 Property {{this.productInfo?.id}}<br><br>
-
                 <button style="width:50%" class="btn-white-outline">Learn more</button>
             </div>
         </div>
         <!-- <div class="mx-auto col-lg-5 text-center text-white m-5 p-5">
             <div class="text-center">
-                <img width="50%" src={{this.productInfo?.img}}>
+                <img width="100%" src={{this.productInfo?.img}}>
             </div>
         </div> -->
     </div>
@@ -30,6 +30,7 @@
         <div class="col-lg-5 text-left">
             <div class="row justify-content-lg-center align-items-start">
               <img width="100%" src={{this.productInfo?.img}}>
+              {{this.productInfo?.img}}
             </div>
         </div>
         <div class="col-lg-5 text-left px-lg-5">
