--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,25 +49,46 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (179).jpg") no-repeat; background-position: 0% 75%;
 
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0 42%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat; background-position: 50% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 10%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (106).jpg") no-repeat; background-position: 0% 80%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat; background-position: 50% 40%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat; background-position: 50% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (74).jpg") no-repeat; background-position: 50% 95%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (177).jpg") no-repeat; background-position: 0 42%;
 
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (39).jpg") no-repeat; background-position: 50% 92%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (188).jpg") no-repeat; background-position: 0% 65%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (213).jpg") no-repeat; background-position: 0% 40%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (211).jpg") no-repeat; background-position: 0% 20%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (435).jpg") no-repeat; background-position: 0% 60%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (427).jpg") no-repeat; background-position: 0% 60%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (428).jpg") no-repeat; background-position: 0% 60%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (39).jpg") no-repeat; background-position: 50% 92%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (410).jpg") n/o-repeat; background-position: 0% 60%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
 
+
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (441).jpg") no-repeat; background-position: 0% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (430).jpg") no-repeat; background-position: 0% 20%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (407).jpg") no-repeat; background-position: 0% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 100%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (416).jpg") no-repeat; background-position: 0% 100%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (420).jpg") no-repeat; background-position: 0% 100%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (421).jpg") no-repeat; background-position: 0% 100%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (424).jpg") no-repeat; background-position: 0% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (427).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (428).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0000,#0007), url("./assets/real-estate (429).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (430).jpg") no-repeat; background-position: 0% 30%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (431).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (432).jpg") no-repeat; background-position: 0% 100%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (442).jpg") no-repeat; background-position: 0% 50%;
+
+
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
     background-size: cover;
 }
 .products{
