--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,7 +88,7 @@ body, html{
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (442).jpg") no-repeat; background-position: 0% 50%;
 
 
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
     background-size: cover;
 }
 .products{
