--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -12,7 +12,9 @@
                 <h6><strong>{{this.productInfo?.name}}</strong></h6>
                 <p>{{this.productInfo?.description}}</p>
                 Property {{this.productInfo?.id}}<br><br>
-                <button style="width:50%" class="btn-white-outline">Learn more</button>
+                <!-- <button style="width:50%" class="btn-white-outline">Learn more</button> -->
+                <a style="width:50%; font-size:14px" class="btn-white-outline text-center"routerLink='/products'>More Properties</a>
+
             </div>
         </div>
         <!-- <div class="mx-auto col-lg-5 text-center text-white m-5 p-5">
