--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -18,9 +18,10 @@
                         <button style="width:50%" class="btn-white-outline">Learn more</button>
                     </div>
                 </div>
-                <div
-                    class="mx-auto col-12 col-lg-6 text-left py-5 px-lg-5"
-                >
+                <div class="mx-auto col-12 col-lg-6 text-left py-5 px-lg-5">
+
+
+
                     <div class="form-modal">
                         <h2>Sign In</h2>
                         <p>Log in with existing account or click sign up below.</p>
@@ -69,6 +70,13 @@
                             </div>
                         </div>
                     </div>
+
+
+
+
+
+
+
                 </div>
 
             </div>
@@ -77,21 +85,79 @@
 
     <div style="font-size:12px" class="row justify-content-lg-center align-items-start p-5">
         <div class="filters col-lg-4 text-left p-lg-5">
-            <h1>Search</h1><br><br>
-            <h6>Search By City</h6>
-            <input [(ngModel)]="city"/>
-            <br><br>
-            <h6>Search By Type</h6>
-            <input [(ngModel)]="type"/>
-            <br><br>
-            <h6>Search By Rooms</h6>
-            <input [(ngModel)]="rooms"/>
-            <br><br>
+            <h2>Search</h2>
+            <input
+                [(ngModel)]="city"
+                placeholder="By City"/>
+            <br>
+            <input
+                [(ngModel)]="type"
+                placeholder="By Type"/>
+            <br>
+            <input
+                [(ngModel)]="rooms"
+                placeholder="By Rooms"/>
+            <br>
             <button
                 class="btn-black m-1 my-3"
                 (click)="clearSearch()">Clear
             </button>
+            <br><br>
+
+            <!-- <form #property="ngForm" (ngSubmit)="createProperty()"> -->
+            <form>
+                <h2>Property</h2>
+                <input
+                    type="text"
+                    name="address"
+                    placeholder="Address"
+                    [(ngModel)]="address"
+                >
+                <input
+                    type="text"
+                    name="location"
+                    placeholder="City"
+                    [(ngModel)]="city"
+                >
+                <input
+                    type="text"
+                    name="price"
+                    placeholder="Price"
+                    [(ngModel)]="price"
+                >
+                <input
+                    type="text"
+                    name="description"
+                    placeholder="Description"
+                    [(ngModel)]="description"
+                >
+                    <input
+                    type="text"
+                    name="rooms"
+                    placeholder="Rooms"
+                    [(ngModel)]="rooms"
+                >
+                <input
+                    type="text"
+                    name="type"
+                    placeholder="Type"
+                    [(ngModel)]="type"
+                >
+                <input
+                    type="file"
+                    name="image"
+                    placeholder="Image"
+                    [(ngModel)]="image"
+                >
+                <input class="btn-black" type="submit" value="Create"
+                    (click)="createProperty( address.value, city.value, price.value, description.value, rooms.value, type.value, image.value)"
+                >
+           </form>
+
+
         </div>
+
+
         <div class="productList col-lg-8 text-left ">
             <div class="row justify-content-center align-items-start">
                 <ng-container
@@ -142,9 +208,17 @@
                     class="text-center"
                     style="width:275px; padding: 7px; color:#000f; font-weight:700; border: 2px solid #0007; background:#0000"
                     (click)="loadMore()">Load more...
-                </button>
+                </button><br>
+                <button
+                    class="text-center"
+                    style="width:275px; padding: 7px; color:#000f; font-weight:700; border: 2px solid #0000"
+                    (click)="showAll()">Show all
+            </button><br>
             </div>
-        </div>
+            <p class="my-2 text-center"style="font-size:12px">
+                <!-- Showing {{this.productsCount}} -->
+            </p>
+            </div>
     </div>
 </div>
 
