--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,6 +1,6 @@
 <div class='page products' class="p-0 m-0">
 
-    <div class="top row justify-content-lg-start align-items-start">
+    <div id="top" class="top row justify-content-lg-start align-items-start">
         <div class="col-lg-12 text-left">
 
             <div class="row justify-content-lg-evenly align-items-center">
@@ -72,11 +72,6 @@
                     </div>
 
 
-
-
-
-
-
                 </div>
 
             </div>
@@ -103,6 +98,10 @@
                 (click)="clearSearch()">Clear
             </button>
             <br><br>
+
+
+
+
 
             <!-- <form #property="ngForm" (ngSubmit)="createProperty()"> -->
             <form>
@@ -148,18 +147,32 @@
                     name="image"
                     placeholder="Image"
                     [(ngModel)]="image"
+                    (change)="fileSelected($event)"
                 >
                 <input class="btn-black" type="submit" value="Create"
                     (click)="createProperty( address.value, city.value, price.value, description.value, rooms.value, type.value, image.value)"
                 >
-           </form>
+            </form>
+
 
 
         </div>
 
 
-        <div class="productList col-lg-8 text-left ">
+        <div class="productList my-5 col-lg-8 text-left ">
             <div class="row justify-content-center align-items-start">
+                <button
+                    class="text-center"
+                    style="width:45%; color:#000f"
+                    (click)="readProducts()"
+                >Ascending
+                </button>
+                <button
+                    class="text-center"
+                    style="width:45%; color:#000f"
+                    (click)="readProductsReverse()"
+                >Descending
+                </button>
                 <ng-container
                     *ngFor="let product of products; let i = index"
                 >
@@ -216,10 +229,10 @@
             </button><br>
             </div>
             <p class="my-2 text-center"style="font-size:12px">
-                <!-- Showing {{this.productsCount}} -->
+                Showing {{this.productsCount}}
             </p>
             </div>
-    </div>
+        </div>
 </div>
 
 
