--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,8 @@ body, html{
 }
 @media( max-width:900px){
     .top{
-      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 25% 0%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (15).jpg") no-repeat; background-position: 50% 0%;
+      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 30% 0%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 0% 50%;
 
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 50% 60%;
