--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,8 +85,8 @@ body, html{
 @media( max-width:900px){
     .top{
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 70% 50%;
-      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 50% 50%;
-      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 10% 50%;
+      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 50% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 0% 50%;
 
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 50% 60%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
