--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -9,7 +9,7 @@
                         <img class="m-3" height="35" src="../assets/Zillow_Wordmark_Blue_RGB lrg.png">
                     </a><br>
                 </div>
-                <div class="mx-auto col-12 col-lg-6 text-center text-white py-5 px-lg-5">
+                <div class="left mx-auto col-12 col-lg-6 text-center text-white py-5 px-lg-5">
                     <div class="text-start px-5">
                         <h1>Find, Tour, Own</h1><br>
                         <p>Find your place with an immersive photo experience and the most listings, including things you won't find anywhere else.
@@ -18,9 +18,7 @@
                         <button style="width:50%" class="btn-white-outline">Learn more</button>
                     </div>
                 </div>
-                <div class="mx-auto col-12 col-lg-6 text-left py-5 px-lg-5">
-
-
+                <div class="right mx-auto col-12 col-lg-6 text-left py-5 px-lg-5">
 
                     <div class="form-modal">
                         <h2>Sign In</h2>
