--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -18,7 +18,7 @@
                         <button style="width:50%" class="btn-white-outline">Learn more</button>
                     </div>
                 </div>
-                <div class="right mx-auto col-12 col-lg-6 text-left py-5 px-lg-5">
+                <div class="right mx-auto col-12 col-lg-6 text-left py-lg-5 px-lg-5">
 
                     <div class="form-modal">
                         <h2>Sign In</h2>
