--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,8 +94,8 @@ body, html{
       background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 0% 70%;
       background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
       background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (469).jpg") no-repeat; background-position: 30% 50%;
-      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (419).jpg") no-repeat; background-position: 60% 50%;
-      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 20% 50%;
+      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (419).jpg") no-repeat; background-position: 60% 50%;
+      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 20% 50%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (474).jpg") no-repeat; background-position: 40% 50%;
       // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (147).jpg") no-repeat; background-position: 50% 50%;
 
