--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -8,7 +8,7 @@
         </a><br>
         <div class="mx-auto col-lg-5 text-center text-white m-5 p-5">
             <div class="text-start">
-                <strong style="font-weight:700; font-size:32px">${{this.productInfo?.price}}.00</strong>
+                <strong style="font-weight:700; font-size:32px">${{this.productInfo?.price}}</strong>
                 <h6><strong>{{this.productInfo?.name}}</strong></h6>
                 <p>{{this.productInfo?.description}}</p>
                 Property {{this.productInfo?.id}}<br><br>
