--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -179,7 +179,7 @@
                         class="product col-lg-5 text-left"
                     >
                         <img width="100%" src={{this.product?.img}}>
-                        <strong style="font-weight:700; font-size:32px">${{this.product.price}}.00</strong><br>
+                        <strong style="font-weight:700; font-size:32px">${{this.product.price}}</strong><br>
                         <h5>{{this.product.name}}</h5>
                         <p>
                         {{this.product.description}}<br><br>
