--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,10 +74,10 @@ body, html{
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (494).jpg") no-repeat; background-position: 0% 60%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 0% 30%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 80%;
 
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (155).jpg") no-repeat; background-position: 0% 80%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat; background-position: 0% 50%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat; background-position: 0% 40%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 99%;
 
