--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -32,7 +32,7 @@
         <div class="col-lg-5 text-left">
             <div class="row justify-content-lg-center align-items-start">
               <img width="100%" src={{this.productInfo?.img}}>
-              <span style="font-size:10px">{{this.productInfo?.img}}</span>
+              <span style="font-size:10px; word-wrap: break-word;">{{this.productInfo?.img}}</span>
             </div>
         </div>
         <div class="col-lg-5 text-left px-lg-5">
