--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,40 +21,40 @@ body, html{
     min-height: 50vh;
 
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat; background-position: 50% 75%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat; background-position: 0% 70%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (277).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (127).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat; background-position: 50% 75%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (277).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (127).jpg") no-repeat; background-position: 0% 50%;
 
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (441).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat; background-position: 50% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (170).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (441).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat; background-position: 50% 40%;
 
 
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat; background-position: 50% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (427).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 90%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (430).jpg") no-repeat; background-position: 0% 20%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (442).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (22).jpg") no-repeat; background-position: 0% 60%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (47).jpg") no-repeat; background-position: 0% 80%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (59).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat; background-position: 50% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (401).jpg") no-repeat; background-position: 0% 95%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (427).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (351).jpg") no-repeat; background-position: 0% 90%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (430).jpg") no-repeat; background-position: 0% 20%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (442).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (22).jpg") no-repeat; background-position: 0% 60%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (47).jpg") no-repeat; background-position: 0% 80%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (59).jpg") no-repeat; background-position: 0% 70%;
 
 
-    background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (131).jpg") no-repeat; background-position: 0% 90%;
-    background: linear-gradient(to right, #0009,#0009), url("./assets/real-estate (267).jpg") no-repeat; background-position: 0% 80%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (429).jpg") no-repeat; background-position: 0% 70%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (386).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (462).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0005,#0005), url("./assets/real-estate (131).jpg") no-repeat; background-position: 0% 90%;
+    // background: linear-gradient(to right, #0009,#0009), url("./assets/real-estate (267).jpg") no-repeat; background-position: 0% 80%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (429).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (386).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (462).jpg") no-repeat; background-position: 0% 50%;
 
 
-    background: linear-gradient(to right, #0007,#0000), url("./assets/real-estate (385).jpg") no-repeat; background-position: 0% 70%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 0% 50%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 0% 40%;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
+    // background: linear-gradient(to right, #0007,#0000), url("./assets/real-estate (385).jpg") no-repeat; background-position: 0% 70%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 0% 50%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 0% 40%;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
 
 
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat; background-position: 50% 75%;
@@ -131,23 +131,23 @@ body, html{
 }
 .details .top{
     min-height: 50vh;
-    background: linear-gradient(#0007,#0007), url("./assets/real-estate (46).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (6).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (16).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (39).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (91).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (106).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (115).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (157).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (161).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (37).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat;
-    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat;
+    // background: linear-gradient(#0007,#0007), url("./assets/real-estate (46).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (6).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (11).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (16).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (39).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (91).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (106).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (115).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (150).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (157).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (161).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (168).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (17).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (37).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (45).jpg") no-repeat;
+    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat;
     background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (5).jpg") no-repeat;
 
 
