--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,7 @@ body, html{
     // background: linear-gradient(to right, #0007,#0000), url("./assets/real-estate (385).jpg") no-repeat; background-position: 0% 70%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 0% 50%;
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 0% 40%;
-    // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
+    background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
 
 
     // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (88).jpg") no-repeat; background-position: 50% 75%;
@@ -70,20 +70,20 @@ body, html{
 @media( max-width:900px){
     .top{
       min-height: 50vh;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 70% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 50% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 70% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (491).jpg") no-repeat; background-position: 50% 50%;
 
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 50% 60%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (492).jpg") no-repeat; background-position: 50% 60%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (412).jpg") no-repeat; background-position: 0% 85%;
 
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (419).jpg") no-repeat; background-position: 60% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 20% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (474).jpg") no-repeat; background-position: 40% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (147).jpg") no-repeat; background-position: 50% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (419).jpg") no-repeat; background-position: 60% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (193).jpg") no-repeat; background-position: 20% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (474).jpg") no-repeat; background-position: 40% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (147).jpg") no-repeat; background-position: 50% 50%;
 
       background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (27).jpg") no-repeat; background-position: 20% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
-      // background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (469).jpg") no-repeat; background-position: 30% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (92).jpg") no-repeat; background-position: 0% 50%;
+      background: linear-gradient(to right, #0007,#0007), url("./assets/real-estate (469).jpg") no-repeat; background-position: 30% 50%;
 
       background-size: cover;
     }
